# catkin-project-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
.github/workflows/: catkin.yml
cfg/: Config.cfg
cmake/: CompilerWarnings.cmake
launch/: example.launch  project.launch
scripts/: cfg_server.py  publisher.py  service_client.py  service_server.py
scripts/cfg/: cfg_server.py
scripts/nodes/: publisher.py  subscriber.py
scripts/package/: dummy.py
scripts/services/: service_client.py  service_server.py
src/: cfg_server.cpp  cpp_node.cpp  publisher.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
src/cfg/: cfg_server.cpp
src/nodes/: publisher.cpp
src/services/: service_client.cpp  service_server.cpp
srv/: Service.srv
tests/: CMakeLists.txt
tests/cpp/: test_cases.cpp
tests/python/: test_cases.py
